--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap"
+    />
+
     <title>html project</title>
   </head>
   <body>
@@ -11,52 +17,107 @@
         <li><a href="#home"> home</a></li>
         <li><a href="#about"> about</a></li>
         <li><a href="#work"> work</a></li>
-        <li><a href="resume"> resume</a></li>
-        <li><a href="#contact"></a></li>
+        <li><a href="#resume"> resume</a></li>
+        <li><a href="#contact">contact</a></li>
       </ul>
     </nav>
-    <section id=" about"></section>
-    <h1>About Me</h1>
-    <p>I am a passionate Software Development student with a strong intrest in building  and solving real world problems through  enjoy learning  new technologies  expecially in web I'm now improving my language in HTML and css</p>
-    <p>My goal is to grow as adeveloper by working on impactful projects,collabolating with others and beyond coding,i value creativity, team work and continous learnig.  </p>
-    <section id="work"></section>
-    <h2>My work</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente consequuntur atque voluptatibus modi a! Quaerat in laudantium aspernatur laboriosam dolores eveniet a, nemo non, quod vitae qui atque eum nesciunt!</p>
-    <section id=" resume"></section>
-    <h2>My resume</h2>
-    <h3>Software development student</h3>
-    <p>
-       <ul>
-            <li>Name: Faith Kibuna </li>
-            <li> Phone number:0769486569</li>
-            <li> Email:faithkibuna9@gmail.com</li>
-       </ul>
+    <section id="about">
+      <h1>hello its faith</h1>
+      <p>
+        Hello! My name is faith kibuna . Am a student at Gomycode harkers
+        pursuing a in software development. I am a creative and driven softwre
+        development student with a passion of bulding smart,morden solutions
+        that make a difference in people's lives.
+      </p>
+      <p>
+        Am currenty strong at Html and css through teamwork.I have worked on
+        personal project like portfolio wedsite and responsive design,which
+        helps me sharpen my problem-solving and creative .My goal as a developer
+        is to work on impactful project,collabolation with other and beyond
+        coding,i value creativity, team work and continous learning.Am looking
+        fowrad to become a full-stack developer
+      </p>
+      <p>
+        Outside coding, I enjoy reading ,which inspires my creativity in tech .I
+        believe in using technology to make life easier and smarter.
+      </p>
+    </section>
+    <section id="work">
+      <h2>My work</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+        consequuntur atque voluptatibus modi a! Quaerat in laudantium aspernatur
+        laboriosam dolores eveniet a, nemo non, quod vitae qui atque eum
+        nesciunt!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+        consequuntur atque voluptatibus modi a! Quaerat in laudantium aspernatur
+        laboriosam dolores eveniet a, nemo non, quod vitae qui atque eum
+        nesciunt!
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+        consequuntur atque voluptatibus
+      </p>
+    </section>
+    <section id="resume">
+      <h2>My resume</h2>
+      <h3>Software development student</h3>
+      <ul>
+        <li>Name: Faith Kibuna</li>
+        <li>Phone number:0769486569</li>
+        <li>Email:faithkibuna9@gmail.com</li>
+      </ul>
 
-        <h4>Education</h4>
-        <P>KCSE:BISHOP gatimu kinyona 2024 attained a mean grade of C+</P>
-        <h4>Skills</h4>
-       <ul>
-        <li> Exellent communication and teamwork</li>
+      <h3>Education</h3>
+      <p>KCSE:Bishop gatimu kinyona 2024 attained a mean grade of C+</p>
+      <p>
+        I have a strong foundation in Computer studies, Mathematics, and
+        science.
+      </p>
+      <p>
+        Currently pursuing a diploma in software development at Gomycode harkers
+      </p>
+      <h4>Skills</h4>
+      <ul>
+        <li>Web developer:Html and css</li>
+        <li>problem-solving and critical thinking</li>
+        <li>Exellent communication and teamwork</li>
         <li>Computer litracy (MS Word Excel,internet use)</li>
         <li>Time managment and adaptability</li>
-       </ul> 
-       <h5>Achievments & Activites</h5>
-        <ul>
+      </ul>
+      <h4>Achievments & Activites</h4>
+      <ul>
         <li>served as a class prefect for four years</li>
-        <li>Member if mathematics club</li>
-        </ul>
-     <h6>Hobbies</h6> 
-    <ul>
+        <li>Member of mathematics club</li>
+      </ul>
+      <h4>Hobbies</h4>
+      <ul>
         <li>Reading</li>
         <li>communities volunteering</li>
         <li>music</li>
-    </ul>
-    </h2>
-</p> 
-</body>
-    <section id="contact"> <a href="call 0117022072"> call 0117022072</a></p>
+      </ul>
+    </section>
+    <section id="contact">
+      <h3>Contact me</h3>
+      <form action="#">
+        <div>
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" required />
+        </div>
+        <div>
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required />
+        </div>
+        <button type="submit">Send</button>
+      </form>
+      <p>
+        Phone number:
+        <a href="tell 0117022072"> tell 0117022072</a>
 
-    <p><a href="mailto:faithkibuna9@gmail.com">send email</a></p>
+        <a href="mailto:faithkibuna9@gmail.com">send email</a>
+      </p>
     </section>
     <footer>
       <p>&copy; 2025 my website| All right reserved</p>
